--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,8 +42,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:ems="10"
-                android:hint="@string/email_address"
-                android:inputType="textEmailAddress"/>
+                android:hint="@string/username"
+                android:inputType="text"/>
 
         <EditText
                 android:id="@+id/etPassword"
