--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,14 +29,27 @@
                 android:textStyle="bold"/>
 
         <EditText
-                android:id="@+id/etName"
+                android:id="@+id/etFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:ems="10"
-                android:hint="@string/enter_your_username"
+                android:hint="First Name"
                 android:inputType="textPersonName"/>
-
+        <EditText
+                android:id="@+id/etName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/enter_your_last_name"
+                android:inputType="textPersonName"/>
+        <EditText
+                android:id="@+id/etUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/username"
+                android:inputType="text"/>
         <EditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
