--- a/app/src/main/res/menu/custom_menu.xml
+++ b/app/src/main/res/menu/custom_menu.xml
@@ -6,4 +6,8 @@
         android:id="@+id/action_logout"
         android:title="Logout"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_profile"
+        android:title="Profile"
+        app:showAsAction="never"/>
 </menu>
