--- a/app/src/main/res/layout/fragment_ratings.xml
+++ b/app/src/main/res/layout/fragment_ratings.xml
@@ -1,117 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <RatingBar
-            android:id="@+id/rbEvent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rating="5"
-            android:stepSize="1"
-            style="@style/Widget.AppCompat.RatingBar"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEvening"/>
-    <RatingBar
-            android:id="@+id/rbFood"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rating="5"
-            android:stepSize="1"
-            style="@style/Widget.AppCompat.RatingBar"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
-    <RatingBar
-            android:id="@+id/rbGames"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rating="5"
-            android:stepSize="1"
-            style="@style/Widget.AppCompat.RatingBar" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvGames" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvHeader">
-        <ImageButton
+
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <RatingBar
+                android:id="@+id/rbHost"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_left_black_24dp"
-                android:id="@+id/ibLeft" android:layout_weight="1" android:backgroundTint="@android:color/transparent"/>
+                android:layout_height="wrap_content"
+                android:rating="5"
+                android:stepSize="1"
+                style="@style/Widget.AppCompat.RatingBar" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvHost" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
+                android:text="Did the host planned and managed the event well?"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" android:id="@+id/tvHost"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"/>
+        <TextView
+                android:text="Did you enjoy the games you played?"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" android:id="@+id/tvGames"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/rbHost" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"/>
+        <TextView
+                android:text="Did you like the food?"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView6" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/rbGames" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"/>
+        <TextView
+                android:text="Did you have a pleasant evening?"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvEvening" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/rbFood" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvHeader">
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_left_black_24dp"
+                    android:id="@+id/ibLeft" android:layout_weight="1"
+                    android:backgroundTint="@android:color/transparent"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/tvDate" android:layout_weight="4"
+                    android:textAlignment="center" android:layout_gravity="center_vertical"/>
+            <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_right_black_24dp"
+                    android:id="@+id/ibRight" android:layout_weight="1"
+                    android:backgroundTint="@android:color/transparent"/>
+
+        </LinearLayout>
+        <Button
+                android:text="Send Feedback"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/btFeedback" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/rbEvent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"/>
+        <TextView
+                android:text="Rate the events you have attended"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/tvDate" android:layout_weight="4"
-                android:textAlignment="center" android:layout_gravity="center_vertical"/>
-        <ImageButton
+                android:layout_height="wrap_content" android:id="@+id/tvHeader"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+        <RatingBar
+                android:id="@+id/rbGames"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_right_black_24dp"
-                android:id="@+id/ibRight" android:layout_weight="1"
-                android:backgroundTint="@android:color/transparent"/>
-    </LinearLayout>
-    <RatingBar
-            android:id="@+id/rbHost"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rating="5"
-            android:stepSize="1"
-            style="@style/Widget.AppCompat.RatingBar" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvHost" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:text="Did the host planned and managed the event well?"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/tvHost"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"/>
-    <TextView
-            android:text="Did you enjoy the games you played?"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/tvGames"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/rbHost" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"/>
-    <TextView
-            android:text="Did you like the food?"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/rbGames" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"/>
-    <TextView
-            android:text="Did you have a pleasant evening?"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvEvening" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/rbFood" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-    <Button
-            android:text="Send Feedback"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btFeedback" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/rbEvent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"/>
-    <TextView
-            android:text="Rate the events you have attended"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tvHeader"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-</android.support.constraint.ConstraintLayout>
+                android:layout_height="wrap_content"
+                android:rating="5"
+                android:stepSize="1"
+                style="@style/Widget.AppCompat.RatingBar" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvGames" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        <RatingBar
+                android:id="@+id/rbEvent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:rating="5"
+                android:stepSize="1"
+                style="@style/Widget.AppCompat.RatingBar"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEvening"/>
+        <RatingBar
+                android:id="@+id/rbFood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:rating="5"
+                android:stepSize="1"
+                style="@style/Widget.AppCompat.RatingBar"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView6"/>
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
