--- a/app/src/main/res/layout/fragment_ratings.xml
+++ b/app/src/main/res/layout/fragment_ratings.xml
@@ -23,7 +23,7 @@
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
-                android:text="Did the host planned and managed the event well?"
+                android:text="Did the host plan and manage the event well?"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/tvHost"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
