--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
-                android:text="Select the foodservice you'd like to oder from"
+                android:text="Select the style of food you'd like to eat"
                 android:layout_width="wrap_content"
                 android:layout_height="23dp" android:id="@+id/tvHeader"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
@@ -21,7 +21,7 @@
         <TextView
                 android:text="Food I'd like to eat"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/tvChoseFood" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/tvChoose" android:layout_weight="1"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
@@ -31,13 +31,13 @@
                 android:id="@+id/spinner1"
                 android:spinnerMode="dropdown"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/tvChoseFood" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvChoose" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="32dp" android:layout_height="wrap_content"/>
         <Button
                 android:text="save choice"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" android:id="@+id/btnSaveGame"
+                android:layout_height="wrap_content" android:id="@+id/btnSaveFood"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
