--- a/app/src/main/res/layout/fragment_ratings.xml
+++ b/app/src/main/res/layout/fragment_ratings.xml
@@ -34,26 +34,57 @@
                 android:text="Did you enjoy the games you played?"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/tvGames"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/rbHost" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"/>
+                android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/tvScoreHost"
+                android:layout_marginTop="8dp"/>
         <TextView
                 android:text="Did you like the food?"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvFood" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/rbGames" app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/tvFood"
+                app:layout_constraintTop_toBottomOf="@+id/tvScoreGame" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"/>
+                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>
         <TextView
                 android:text="Did you have a pleasant evening?"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvEvening" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/rbFood" app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/tvEvening"
+                app:layout_constraintTop_toBottomOf="@+id/tvScoreFood" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"/>
+                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>
+        <TextView
+                android:text="Score: no votes yet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/tvScoreHost"
+                app:layout_constraintTop_toBottomOf="@+id/rbHost"
+                android:textStyle="bold" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+                android:text="Score: no votes yet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/tvScoreGame"
+                app:layout_constraintTop_toBottomOf="@+id/rbGames"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:textStyle="bold"/>
+        <TextView
+                android:text="Score: no votes yet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/tvScoreFood"
+                app:layout_constraintTop_toBottomOf="@+id/rbFood" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:textStyle="bold"/>
+        <TextView
+                android:text="Score: no votes yet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/tvScoreEvening"
+                app:layout_constraintTop_toBottomOf="@+id/rbEvent"
+                android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="0dp"
@@ -82,10 +113,11 @@
                 android:text="Send Feedback"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/btFeedback" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/rbEvent" app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/btFeedback"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"/>
+                android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/tvScoreEvening"
+                android:layout_marginTop="8dp"/>
         <TextView
                 android:text="Rate the events you have attended"
                 android:layout_width="wrap_content"
