Fixed Profile Activity, Implemented counters + layout changes.

--- a/app/src/main/res/drawable/rounded_rectangle_magenta.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_magenta.xml
@@ -4,7 +4,7 @@
 
     <!-- Hintergrundfarbe -->
     <solid
-            android:color="#38e4a5" >
+            android:color="#FF4081" >
     </solid>
 
     <!-- Radius der Rundung -->
