--- a/app/src/main/res/drawable/rounded_rectangle_blue.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_blue.xml
@@ -4,7 +4,7 @@
 
     <!-- Hintergrundfarbe -->
     <solid
-            android:color="#00aaff" >
+            android:color="#303f9f" >
     </solid>
 
     <!-- Radius der Rundung -->
