--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
-                android:text="Select the style of food you'd like to eat"
+                android:text="Select the kind of food you'd like to eat"
                 android:layout_width="wrap_content"
                 android:layout_height="23dp" android:id="@+id/tvHeader"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
@@ -59,7 +59,8 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/tvDate" android:layout_weight="4"
-                    android:textAlignment="center" android:layout_gravity="center_vertical" android:textStyle="bold"/>
+                    android:textAlignment="center" android:layout_gravity="center_vertical" android:textStyle="bold"
+                    android:textSize="15sp"/>
             <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_right_black_24dp"
