--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -59,7 +59,8 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/tvDate" android:layout_weight="4"
-                    android:textAlignment="center" android:layout_gravity="center_vertical" android:textStyle="bold"/>
+                    android:textAlignment="center" android:layout_gravity="center_vertical" android:textStyle="bold"
+                    android:textSize="15sp"/>
             <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_right_black_24dp"
