--- a/app/src/main/res/layout/listview_header.xml
+++ b/app/src/main/res/layout/listview_header.xml
@@ -11,7 +11,7 @@
             android:gravity="center"
             android:padding="8dp"
             android:text=""
-            android:visibility="visible" android:background="@color/colorPrimaryDark" android:textStyle="bold"
-            android:textSize="18sp" android:textColor="@color/colorLightBlue"/>
+            android:visibility="visible" android:background="@color/colorWhite" android:textStyle="bold"
+            android:textSize="15sp" android:textColor="@android:color/black" android:textAlignment="viewStart"/>
 
 </LinearLayout>
