--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -10,7 +10,6 @@
             android:layout_height="wrap_content"
             android:background="#FFF"
             android:gravity="center_vertical"
-            android:padding="5dp"
-            android:textSize="18sp"/>
+            android:textSize="14sp" android:paddingLeft="20dp" android:paddingTop="5dp" android:paddingBottom="5dp"/>
 
 </LinearLayout>
